--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+body, html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+  height: 100%;
 }
