changed row style without adding container

--- a/src/components/app/Ships/Rocinante/Coffee/CoffeeDisplay.css
+++ b/src/components/app/Ships/Rocinante/Coffee/CoffeeDisplay.css
@@ -4,3 +4,8 @@
   background: linear-gradient(white, #eeeeee);
   overflow: hidden;
 }
+
+#roci__coffee .row {
+  margin-left: 0;
+  margin-right: 0;
+}
