--- a/src/components/app/Devices/FileBrowser/RightSideBar.css
+++ b/src/components/app/Devices/FileBrowser/RightSideBar.css
@@ -15,7 +15,7 @@
 }
 
 #dev__file-browser--mao .right-item--separator {
-  margin: 3px 0;
+  margin: 5px 0;
   height: 3px;
   width: 100%;
   background-color: rgba(255,255,255, 0.6);
@@ -33,13 +33,28 @@
 }
 
 #dev__file-browser--mao .green-bg {
-  background-color: rgba(60,126,64,.8);
+  background: linear-gradient(
+    127deg,
+    rgba(42,98,61,.8),
+    rgba(105,145,119,.8),
+    rgba(42,98,61,.8)
+    );
 }
 
 #dev__file-browser--mao .mustard-bg {
-  background-color: rgba(195,173,83,0.8);
+  background: linear-gradient(
+    120deg,
+    rgba(195,173,83,0.8),
+    rgba(219,205,151,0.8) 20%,
+    rgba(195,173,83,0.8)
+    );
 }
 
 #dev__file-browser--mao .blue-bg {
-  background-color: rgba(23,115,141,0.8);
+  background: linear-gradient(
+    127deg,
+    rgba(23,115,141,0.8) 40%,
+    rgba(115,171,186,0.8),
+    rgba(23,115,141,0.8)
+    );
 }
